# csv-parser

./: .cmake-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  ARCHITECTURE.md  BOMStrippingRefactor.md  CHUNK_ETL_PLAN.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CODECOV_AGENTS.md  CodeCoverage.cmake  Doxyfile  LICENSE  Makefile  QUOTE_PERFORMANCE_TODO.md  README.md  SIGMOD19_WORKING_PLAN.md  TEST_TODO.md  TODO.md  _CMakeLists2.txt  code_cov.sh  codecov.yml  cpp.hint  csv-parser.sln  csv-parser.vcxproj  csv-parser.vcxproj.filters  doxygen_objdb_7372.tmp  get_code_cov.sh  pyproject.toml  sh.cpp  sh.hpp  single_header.json  single_header.py
benchmarks/: CMakeLists.txt  README.md  bench_common.hpp  csv_parser_fast_cpp_read_bench.cpp  csv_parser_msvc_smoke.cpp  csv_parser_multi_pass_bench.cpp  csv_parser_read_bench.cpp  dataframe_rapidcsv_roundtrip_bench.cpp  fast_cpp_csv_parser_multi_pass_bench.cpp  fast_cpp_csv_parser_read_bench.cpp  glaze_csv_bench_common.hpp  glaze_csv_multi_pass_bench.cpp  glaze_csv_read_bench.cpp  multi_pass_etl.hpp
benchmarks/results/: .gitignore
benchmarks/results/5000000_rows/clean/: csv_parser_fast_cpp_read_bench.json  csv_parser_multi_pass_bench.json  csv_parser_read_bench.json  dataframe_rapidcsv_roundtrip_bench.json  fast_cpp_csv_parser_multi_pass_bench.json  fast_cpp_csv_parser_read_bench.json  glaze_csv_multi_pass_bench.json
benchmarks/results/5000000_rows/multiline/: csv_parser_multi_pass_bench.json  csv_parser_read_bench.json  dataframe_rapidcsv_roundtrip_bench.json  glaze_csv_multi_pass_bench.json
benchmarks/results/5000000_rows/quoted/: csv_parser_fast_cpp_read_bench.json  csv_parser_multi_pass_bench.json  csv_parser_read_bench.json  dataframe_rapidcsv_roundtrip_bench.json  fast_cpp_csv_parser_multi_pass_bench.json  fast_cpp_csv_parser_read_bench.json  glaze_csv_multi_pass_bench.json
benchmarks/scripts/: compare_duckdb_schema_info.ps1  generate_8col_dataset.py  run_benchmarks.ps1
cmake/: getCPM.cmake
csv_coverage/: index.html
include/internal/: ARCHITECTURE.md  BOMStrippingRefactor.md  CMakeLists.txt  JOURNEY_OF_A_CSV_FIELD.md  QUOTE_REFACTOR2.md  RowCollectionRefactor.md  THREADSAFE_DEQUE_DESIGN.md  ThreadPoolRefactor.md  basic_csv_parser.cpp  basic_csv_parser.hpp  basic_csv_parser_guessing.cpp  basic_csv_parser_simd.hpp  col_names.cpp  col_names.hpp  common.hpp  compatibility.hpp  constants.hpp  csv_chunk_parser.hpp  csv_exceptions.hpp  csv_format.cpp  csv_format.hpp  csv_parallel_parser.hpp  csv_parse_orchestrator.hpp  csv_parser_core.hpp  csv_read_scheduler.hpp  csv_reader.cpp  csv_reader.hpp  csv_reader_internals.cpp  csv_reader_internals.hpp  csv_reader_iterator.cpp  csv_row.cpp  csv_row.hpp  csv_row_json.cpp  csv_speculative_chunks.hpp  csv_speculative_diagnostics.hpp  csv_speculative_parser.hpp  csv_speculative_scanner.hpp  csv_speculative_validator.hpp  csv_stat.cpp  csv_stat.hpp  (+27 more)
include/internal/data_frame/: AGENTS.md  data_frame.hpp  data_frame_cell.hpp  data_frame_column.hpp  data_frame_executor.hpp  data_frame_options.hpp  data_frame_row.hpp  fwd.hpp  indexed_proxy_iterator.hpp  row_overlay.hpp
include/internal/memory/: block_arena.hpp  constants.hpp  field_scalar_list.hpp  quote_arena.hpp  raw_csv_field.hpp  raw_csv_field_list.hpp
include/internal/parallel/: indexed_task_pool.hpp
include/internal/parser/: core.hpp  driver.cpp  driver.hpp  guessing.cpp  mmap.cpp  mmap.hpp  orchestrator.hpp  scheduler.hpp  stream.hpp
include/internal/speculative/: chunk_parser.hpp  chunks.hpp  diagnostics.hpp  parallel_parser.hpp  scanner.hpp  validator.hpp
programs/: CMakeLists.txt  bug92.cpp  csv_bench.cpp  csv_bench.py  csv_generator.cpp  csv_guess_bench.cpp  csv_info.cpp  csv_schema_info.cpp  csv_stats.cpp  csv_tuning.cpp  data_type_bench.cpp  round_trip.cpp
python/: CMakeLists.txt  README.md  csvpy.cpp  csvpy_bindings.hpp  csvpy_core.cpp  csvpy_document.cpp  csvpy_format.cpp  csvpy_numpy.cpp  csvpy_predicate.cpp  csvpy_predicate.hpp  csvpy_reader.cpp  csvpy_writer.cpp  fastpycsv.cpp  fastpycsv_bindings.hpp  fastpycsv_core.cpp  fastpycsv_format.cpp  fastpycsv_numpy.cpp  fastpycsv_predicate.cpp  fastpycsv_predicate.hpp  fastpycsv_reader.cpp  fastpycsv_writer.cpp  fastpycsv_zip.cpp
python/benchmarks/: AGENTS.md  _support.py  compare_eda.py  compare_filter.py  compare_numpy_materialization.py  compare_python_materialization.py  compare_readers.py  compare_zip_filter.py
python/csvpy/: DictReader.py  __init__.py  _dict_reader.py  _document.py  _format.py  _numpy.py  _reader.py  _writer.py  compat.py
python/docs/: api.md  benchmarks.md  compressed-inputs.md  conf.py  index.md  numpy.md  quickstart.md  requirements.txt  type-casting.md
python/examples/: PyDemo1.py  PyDemo2.py  PyDemo3.py  PyDemo4.py  PyDemo5.py  PyDemo6.py  PyDemo7.py  eda_summary.py
python/fastpycsv/: __init__.py  _format.py  _numpy.py  _reader.py  _writer.py  compat.py
python/tests/: tempfiles.py  test_compat.py  test_document.py  test_read_numpy.py
single_include_test/: CMakeLists.txt  README.md  csv.hpp  file1.cpp  file2.cpp
tests/: AGENTS.md  CLAUDE.md  CMakeLists.txt  csv_test.hpp  main.cpp  test_basic_csv_parser_simd.cpp  test_cli.py  test_col_names.cpp  test_csv_buffer.cpp  test_csv_clean.cpp  test_csv_delimiter.cpp  test_csv_field.cpp  test_csv_field_array.cpp  test_csv_format.cpp  test_csv_iterator.cpp  test_csv_ranges.cpp  test_csv_row.cpp  test_csv_row_json.cpp  test_csv_row_offsets.cpp  test_csv_speculative_parser.cpp  test_csv_stat.cpp  test_data_frame.cpp  test_data_frame_etl.cpp  test_data_type.cpp  test_edge_cases_large_rows.cpp  test_error_handling.cpp  test_guess_csv.cpp  test_indexed_task_pool.cpp  test_io.cpp  test_parser_edge_cases.cpp  test_raw_csv_data.cpp  test_read_csv.cpp  test_read_csv_file.cpp  test_round_trip.cpp  test_row_start_position.cpp  test_speculative_parser.cpp  test_sql.cpp  test_stream_sources.cpp  test_threadsafe_deque_race.cpp  test_write_csv.cpp
tests/shared/: CLAUDE.md  file_guard.hpp  float_test_cases.hpp  generated_file.hpp  non_seekable_stream.hpp  timeout_helper.hpp
(+604 files in other folders)
